# gnome-control-center

./: configure.ac
panels/region/: Makefile.am  gnome-input-source-fcitx.c  gnome-input-source-fcitx.h  gnome-input-source-ibus.c  gnome-input-source-ibus.h  gnome-input-source-multiprovider.c  gnome-input-source-multiprovider.h  gnome-input-source-provider.c  gnome-input-source-provider.h  gnome-input-source-xkb.c  gnome-input-source-xkb.h  gnome-input-source.c  gnome-input-source.h  gnome-region-panel-input-chooser.ui  gnome-region-panel-input.c
